--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <title>Pinterest Video Downloader</title>
 </head>
 <body>
+    <div class="content">
+
     <div class="page-container">
         <div class="content-wrap">
             <h1>Pinterest Video Downloader</h1>
@@ -45,6 +47,7 @@
     <footer class="footer">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur metus ligula, cursus sit amet aliquam ac, laoreet maximus sapien. Quisque non convallis diam. Ut quis velit sed mauris gravida consectetur id semper est. Integer id fringilla augue. </p>
     </footer>
+    </div>
     </div>
     
 </body>
